# pyproject.toml
[build-system]
requires = ["setuptools>=65.5", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Enable version inference: https://pypi.org/project/setuptools-scm/#description

[tool.black]
# https://github.com/psf/black
line-length = 120
exclude = "(.eggs|.git|.mypy_cache|.nox|.tox|_build|build|dist|venv)"

[tool.isort]
profile = 'black'
line_length = 120
