# Copyright (c) 2021 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of Shareloc
# (see https://github.com/CNES/shareloc).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Shareloc setup configuration file

# package setup main metadata
[metadata]
name = shareloc
author = CNES
author_email = cars@cnes.fr
url = https://shareloc.readthedocs.io/
project_urls =
    Source = https://github.com/CNES/shareloc
    Documentation = https://shareloc.readthedocs.io/en/latest/
description = Simple Geometry library
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
platform = any
keywords: shareloc, cars, 3D, DEM, pandora, photogrammetry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6

setup_requires =
    setuptools_scm # Following https://pypi.org/project/setuptools-scm/

# shareloc packages dependencies
install_requires =
    importlib-metadata  ; python_version < "3.8"
    importlib           ; python_version > "3.8"
    numpy>=1.17.0
    scipy
    rasterio
    xarray
    netCDF4==1.5.3
    numba

package_dir =
    . = shareloc
packages = find:

[options.extras_require]
# [dev] mode dependencies: include notebook and doc
dev =
    pytest
    pytest-cov
    pre-commit
    isort>=5.8.0                  # Check imports
    black>=21.5b0                 # PEP8 format code
    flake8>=3.9.1                 # General linter
    flake8-copyright>=0.2.2       # Check copyrights
    flake8-comprehensions>=3.4.0  # Check list/dict/set
    flake8-bugbear>=21.4.3        # Add some rules to flake8
    pylint>=2.8.2                 # General linter with more rules
    setuptools_scm                # version from git tag
    virtualenv
    configupdater
    twine                         # for pypi upload
    jupyter                       # for pytest test_notebooks.py
    bokeh                         # for pytest test_notebooks.py
    sphinx                        # for shareloc doc
    sphinx-rtd-theme              # for shareloc doc
    graphviz                      # for shareloc doc

# [doc] mode dependencies
doc =
    sphinx
    sphinx-rtd-theme
    graphviz

# [notebook] mode dependencies
notebook =
    jupyter
    bokeh


# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist, tests/test_output,
# Add flake8 ignored rules
ignore =
# from black compatibility
extend-ignore = E203, W503
max-complexity = 15
max-line-length = 120
#show-source = true
# Flake8-copyright
copyright-check = True
# errors types are not selected by default, so add them to your selection
select = E,F,W,C,B9,C4,B
